--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
     table.bordered-table th, td {border: 1px solid silver; padding: 4px;}
     table.bordered-table {border-collapse: collapse;}
   </style>
+
+  <link rel="stylesheet" href="App.css">
 </head>
 
 <body>
